Message List: Fix width jump when switching chat on iPad (#3344)

--- a/src/components/middle/MessageList.scss
+++ b/src/components/middle/MessageList.scss
@@ -457,11 +457,10 @@
 
   .Transition_slide-from > &,
   .Transition_slide-to > & {
-    padding-inline-end: var(--scrollbar-width) !important;
+    scrollbar-color: transparent !important;
 
-    scrollbar-width: none !important;
-    &::-webkit-scrollbar {
-      width: 0 !important;
+    &::-webkit-scrollbar-thumb {
+      background-color: transparent !important;
     }
   }
 }
